Adding in Client. Gradle build runs but I've removed module-info.java to get it to work