@@ -8,8 +8,8 @@ ext.moduleName = 'com.mechanitis.demo.sense.client'
 dependencies {
     api project(':com.mechanitis.demo.sense.service')
 
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.2.0'
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-api:5.2.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
 }
 
 javafx {
@@ -17,28 +17,4 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.base', 'javafx.fxml', 'javafx.graphics' ]
 }
 
-test {
-    useJUnitPlatform()
-}
-
-mainClassName = "$moduleName/org.openjfx.MainApp"
-
-def java_home = hasProperty('org.gradle.java.home') ? getProperty('org.gradle.java.home') : System.getenv('JAVA_HOME')
-def fx_jmods = hasProperty('path.to.fx.mods') ? getProperty('path.to.fx.mods') : System.getenv('PATH_TO_FX_MODS')
-
-task jlink(type: Exec) {
-    dependsOn 'clean'
-    dependsOn 'jar'
-
-    workingDir 'build'
-
-    if (java_home == null) {
-        throw new RuntimeException("java_home is not defined.")
-    }
-    if (fx_jmods == null) {
-        throw new RuntimeException("fx_jmods is not defined.")
-    }
-    commandLine "${java_home}/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}${fx_jmods}",
-            '--add-modules', "${moduleName}", '--output', "${moduleName}", '--strip-debug',
-            '--compress', '2', '--no-header-files', '--no-man-pages'
-}
+mainClassName = "com.mechanitis.demo.sense.client.Dashboard"
